# slotagent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_RULES.md  LICENSE  PROJECT_PLAN.md  README.md  README.zh-CN.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  lint.yml
docs/: api_reference.md  faq.md  user_guide.md
docs/architecture/: approval_workflow.md  core_scheduler.md  hook_expansion_plan.md  hook_system.md  plugin_system.md  tool_system.md
docs/data_models/: hook_events.md  plugin_context.md  plugin_result.md  tool_definition.md  tool_execution_context.md
docs/interfaces/: core_interfaces.md  tool_interface.md
examples/: approval_workflow_example.py  custom_plugin_example.py  fine_grained_hooks_example.py  independent_mode_example.py  llm_plugins_example.py  standalone_mode_example.py
releases/: RELEASE_NOTES_v0.1.0-alpha.md  RELEASE_NOTES_v0.2.0-alpha.md
scripts/: run_ci_checks.bat  run_ci_checks.sh
src/slotagent/: __init__.py  agent.py  interfaces.py  types.py
src/slotagent/core/: __init__.py  approval_manager.py  core_scheduler.py  hook_manager.py  plugin_pool.py  tool_registry.py
src/slotagent/llm/: __init__.py  interface.py  mock_llm.py  qwen_llm.py
src/slotagent/plugins/: __init__.py  guard.py  healing.py  observe.py  reflect.py  schema.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_plugins.py  sample_tools.py
tests/integration/: test_complete_workflow.py  test_llm_plugins_integration.py
tests/unit/: test_agent.py  test_approval_manager.py  test_core_scheduler.py  test_hook_manager.py  test_plugin_pool.py  test_tool.py  test_tool_registry.py
tests/unit/llm/: test_mock_llm.py
tests/unit/plugins/: test_guard.py  test_guard_human_in_loop.py  test_healing.py  test_healing_llm.py  test_reflect_llm.py  test_reflect_observe.py  test_schema.py
